Fixed orphan text from too large font

--- a/mobile.css
+++ b/mobile.css
@@ -45,7 +45,7 @@
 }
 
 .mobile-header {
-  font-size: 0.75em;
+  font-size: 0.6em;
   margin: auto;
   text-align: center;
   padding: 5em;
